Converting list of pushes to monospace font and fixing size on mobile.

--- a/mobile.css
+++ b/mobile.css
@@ -11,5 +11,5 @@ h1 {
 }
 
 td, .buttonPushTime {
-  font-size: 1.6rem;
+  font-size: 1.3rem;
 }
