--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body {
   font-family: "open sans", Verdana, arial, sans-serif;
 }
 
+table, th, td, .buttonPushTime {
+  font-family: "Liberation Mono", "Droid Sans Mono", "Lucida Console", Monaco, "Courier New", Courier, Consolas, monospace;
+}
+
 /*table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
